# opensnitch-tui

./: Cargo.toml  README.md  build.rs
.devcontainer/: Dockerfile
.github/workflows/: build.yml
src/: alert.rs  app.rs  cli.rs  constants.rs  event.rs  log.rs  main.rs  opensnitch_json.rs  opensnitch_proto.rs  operator_util.rs  server.rs  ui.rs
