[package]
name = "opensnitch-tui"
version = "0.0.1"
edition = "2024"

[dependencies]
futures = "0.3.31"
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29.0"
color-eyre = "0.6.3"
tonic = "*"
prost = "0.14.1"
tonic-prost = "*"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.53", features = ["wrap_help"] }

[build-dependencies]
tonic-prost-build = "*"
