[package]
name = "opensnitch-tui"
version = "0.0.6-replete"
edition = "2024"

[dependencies]
chrono = "0.4"
futures = "0.3.31"
crossterm = { version = "0.28.1", default-features = false, features = ["event-stream", "events"] }
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
color-eyre = "0.6.3"
tonic = "*"
prost = "0.14.1"
tonic-prost = "*"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.53", features = ["wrap_help"] }
tower = "0.4"
hyper = { version = "0.14", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[build-dependencies]
tonic-prost-build = "*"

[profile.release]
strip = true
lto = true
opt-level = "z"
